[tool.poetry]
name = "ada-actions"
version = "0.1.0"
description = ""
authors = ["Tania Allard <taniar.allard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
